Fixes editor height on small screen

--- a/src/pages/editor/styles.scss
+++ b/src/pages/editor/styles.scss
@@ -15,6 +15,10 @@
     padding: 0;
   }
 
+  .column.full-height {
+    height: 100%;
+  }
+
   font-family: "Inconsolata", Monaco, monospace;
   font-weight: normal;
   font-size: small;
